<resources>
    <string name="app_name">Permutations</string>
    <string name="textView">Welcome!</string>
    <string name="textView02">Enter First Number</string>
    <string name="textView03">Enter Second Number</string>
    <string name="textView04">Elements Number (n)</string>
    <string name="textView05">Positions Number (k)</string>
    <string name="textView06">Permutation Calculator</string>
    <string name="textView07">Without Repetitions</string>
    <string name="textView08">With Repetitions</string>
    <string name="textView09" translatable="false">3</string>
    <string name="textView10">Enter</string>
    <string name="textView11">Order Is Important</string>
    <string name="textView12">"Order Not Is Important "</string>
    <string name="textView13" translatable="false">3</string>
    <string name="textView14" translatable="false">formula</string>
    <string name="textView15">(Permutation)</string>
    <string name="textView16">(Combination)</string>
</resources>